# VoidEngine

./: .gitignore  .gitmodules  .project  CMakeLists.txt  VoidEngineLog.txt  make_headers.py  pom.xml  prepare.sh
src/main/cxx/: lib.cpp
src/main/java/com/kgaft/VoidEngine/: Main.java
src/main/java/com/kgaft/VoidEngine/Assets/: AssetManager.java
src/main/java/com/kgaft/VoidEngine/JNI/: Second.java  Test.java  VulkanContext.java
src/main/java/com/kgaft/VoidEngine/Logging/: Logger.java  LoggerMessage.java  VulkanLoggerCallback.java
src/main/java/com/kgaft/VoidEngine/Render/: #VulkanContext.java#  IDevicePicker.java  VulkanContext.java
src/main/java/com/kgaft/VoidEngine/Window/: EditorWindow.java  KeyBoardCallBack.java  MouseMovementCallBack.java  Window.java
